webapp/base/webapp-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp-ns 
spec: {}
status: {}
