webapp/base/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: webapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
