webapp/base/webapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
  name: webapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: webapp
    weight: 100
